# rust-defrag

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-source.cmd  package-source.ps1
.github/workflows/: ci.yml
docs/: ntfs-internals.md
src/: analyzer.rs  cli.rs  defrag.rs  errors.rs  lib.rs  main.rs  progress.rs  volume.rs  winapi.rs
tests/: integration_test.rs
